--- a/deployments/server/values.yaml
+++ b/deployments/server/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: ghcr.io/snapp-incubator/snappcloud-status-backend 
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
