--- a/deployments/server/values.yaml
+++ b/deployments/server/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+replicaCount: 1
+
 image:
   repository: ghcr.io/snapp-incubator/snappcloud-status-backend 
   pullPolicy: Always
@@ -54,6 +56,14 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+resources:
+  limits:
+    cpu: 1000m
+    memory: 512Mi
+  requests:
+    cpu: 800m
+    memory: 512Mi
 
 autoscaling:
   enabled: false
