--- a/internal/config/values.yml
+++ b/internal/config/values.yml
@@ -3,12 +3,12 @@ logger:
   level: "info"
   encoding: "console"
 querier:
-  request_interval: 10s
-  request_timeout: 2s
+  request_interval: 5s
+  request_timeout: 1s
   thanos_frontends:
-    teh1: "localhost:9090"
-    teh2: "localhost:9090"
-    snappgroup: "localhost:9090"
+    teh1: "http://localhost:9090/api/v1/query"
+    teh2: "http://localhost:9090/api/v1/query"
+    snappgroup: "http://localhost:9090/api/v1/query"
   services:
     - order: 1
       name: "Pass"
