--- a/deployments/server/values.yaml
+++ b/deployments/server/values.yaml
@@ -81,6 +81,6 @@ serviceMonitor:
   enabled: true
 
 env:
-  querier__thanos_frontends__teh1: "http://thanos-query-frontend-http:9090/api/v1/query"
-  querier__thanos_frontends__teh2: "http://thanos-query-frontend-http:9090/api/v1/query"
-  querier__thanos_frontends__snappgroup: "http://thanos-query-frontend-http:9090/api/v1/query"
+  querier__thanos_frontends__teh1: "http://thanos-query-frontend-http.openshift-monitoring.svc.cluster.local:9090/api/v1/query"
+  querier__thanos_frontends__teh2: "http://thanos-query-frontend-http.openshift-monitoring.svc.cluster.local:9090/api/v1/query"
+  querier__thanos_frontends__snappgroup: "http://thanos-query-frontend-http.openshift-monitoring.svc.cluster.local:9090/api/v1/query"
