--- a/deployments/server/values.yaml
+++ b/deployments/server/values.yaml
@@ -41,21 +41,8 @@ service:
   protocol: TCP
   port: 8080
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+route:
+  enabled: true
 
 resources:
   limits:
