--- a/deployments/server/templates/configmap.yaml
+++ b/deployments/server/templates/configmap.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{- include "snappcloud-status-backend.labels" . | nindent 4 }}
 data:
-  values.yml: | {{- .Values.values | toYaml | nindent 4 }}
+  configs.yml: | {{- .Values.configs | toYaml | nindent 4 }}
 
