--- a/deployments/server/okd4-teh-1.yaml
+++ b/deployments/server/okd4-teh-1.yaml
@@ -1,4 +1,5 @@
-region: teh-2
+region: teh-1
+hostname: okd4.teh-1.snappcloud.io
 
 configs:
   querier:
@@ -51,6 +52,16 @@ configs:
           outage: 'up{job="node-exporter"}'
       - order: 10
         name: "Traffic observability (Hubble)"
+        queries:
+          disruption: 'up{job="node-exporter"}'
+          outage: 'up{job="node-exporter"}'
+      - order: 11
+        name: "ArgoCD"
+        queries:
+          disruption: 'up{job="node-exporter"}'
+          outage: 'up{job="node-exporter"}'
+      - order: 12
+        name: "ArgoWF"
         queries:
           disruption: 'up{job="node-exporter"}'
           outage: 'up{job="node-exporter"}'
