--- a/deployments/server/values.yaml
+++ b/deployments/server/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/snapp-incubator/snappcloud-status-backend 
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.1.9"
 
 imagePullSecrets: []
 nameOverride: ""
