add harbor-client helm chart and workflows

--- a/clients/harbor-client/Dockerfile
+++ b/clients/harbor-client/Dockerfile
@@ -1,10 +1,14 @@
-FROM golang:alpaine
+FROM golang:1.16-alpine
 
 WORKDIR /client
 
 COPY . .
 
-RUN go build -o harbor-client
+RUN go mod download
+
+RUN go build -o harbor-client .
+
+ENV IMAGE_REFERENCE "//core.harbor.domain/test-project/busybox:test-tag" 
 
 EXPOSE 8080
 
