Modify helm chart for harbor client

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.dylib
 .idea/
+.DS_Store
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,3 +21,6 @@ vendor/
 
 # Go workspace file
 go.work
+
+#env files
+.env
