--- a/clients/harbor-client/deploy/values.yaml
+++ b/clients/harbor-client/deploy/values.yaml
@@ -41,7 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
 
 resources:
   limits:
@@ -58,12 +58,11 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+volumes:
+  - name: spcld-harbor-client-secret
+    secret:
+      secretName: spcld-harbor-client-url
+      optional: false
 
 # Additional volumeMounts on the output Deployment definition.
 volumeMounts: []
