--- a/clients/harbor-client/deploy/templates/secret.yaml
+++ b/clients/harbor-client/deploy/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.volumes[0].secret.secretName }}
+  name: {{ .Values.configSecretName }}
   labels:
     {{- include "snappcloud-harbor-client.labels" . | nindent 4 }}
 type: Opaque
 data:
-  IMAGE_REFERENCE: ""
+  IMAGE_REFERENCE: "The image reference URL starts with //."
