--- a/clients/harbor-client/deploy/values.yaml
+++ b/clients/harbor-client/deploy/values.yaml
@@ -1,13 +1,8 @@
-# Default values for snappcloud-harbor-client.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 image:
-  repository: ghcr.io/snapp-incubator/snappcloud-status-backend 
+  repository: core.harbor.domain/test-project/harbor-health-client:latest
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
   tag: "0.0.1"
 
 imagePullSecrets: []
@@ -15,29 +10,10 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: false
-  # Automatically mount a ServiceAccount's API credentials?
   automount: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
-
-podAnnotations: {}
-podLabels: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
@@ -58,20 +34,4 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes:
-  - name: spcld-harbor-client-secret
-    secret:
-      secretName: spcld-harbor-client-url
-      optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+configSecretName: spcld-harbor-health-client
