--- a/clients/harbor-client/deploy/templates/secret.yaml
+++ b/clients/harbor-client/deploy/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
     {{- include "snappcloud-harbor-client.labels" . | nindent 4 }}
 type: Opaque
-data:
+stringData:
   IMAGE_REFERENCE: "The image reference URL starts with //."
