--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,12 +49,8 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Tag Docker image
-        id: tag
-        uses: docker/metadata-action@v3
+      - uses: docker/metadata-action@v3
+        id: meta
         with:
           tags: |
             type=ref,event=branch
