--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,31 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: coverage.out
-  build:
+
+  build-main:
+    name: build
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v2
+        with:
+          file: "Dockerfile"
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+
+  build-clients:
     name: build
     runs-on: ubuntu-latest
     needs:
@@ -36,7 +60,7 @@ jobs:
       - test
     strategy:
       matrix:
-        dir: ["", "clients/proxy-client", "clients/harbor-client"]
+        dir: ["clients/proxy-client", "clients/harbor-client"]
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
@@ -52,7 +76,7 @@ jobs:
           context: ${{ matrix.dir }}
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}${{ matrix.dir }}:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}/${{ matrix.dir }}:${{ github.sha }}
 
   release:
     name: release
