--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,7 +82,8 @@ jobs:
     name: release
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build-main
+      - build-clients
     strategy:
       matrix:
         dir: ["deployments/server", "clients/proxy-client/deploy", "clients/harbor-client/deploy"]
