--- a/deployment/charts/Chart.yaml
+++ b/deployment/charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: snappcloud-status-backend
-description: A Helm chart for Kubernetes
+description: snappcloud-status-backend Helm chart
 
 # A chart can be either an 'application' or a 'library' chart.
 #
